# langchain-chat-bot

./: .cmd_history  .env.example  .gitignore  AGENTS.md  README.md  config.yaml  langchain-chat 会话记录.md  pyproject.toml
config/: logging.yaml  presets.yaml
docs/: user_guide.md  workflow_log.md
src/: main.py
src/core/: chat_engine.py  comparator.py  config_manager.py  exporter.py  logger.py  preset_manager.py  session_manager.py  user_manager.py
src/interface/: capability_protocols.py  ui_protocol.py
src/models/: schemas.py
src/storage/: base.py  factory.py  sqlite_backend.py
src/ui/tui/: app.py  chat_view.py  menu_view.py  widgets.py
tests/: conftest.py  test_chat_engine.py  test_comparator.py  test_config_manager.py  test_exporter.py  test_logger.py  test_models.py  test_preset_manager.py  test_session_manager.py  test_storage.py  test_user_manager.py
